tests/baselines/reference/typeFromPropertyAssignment15.errors.txt
a.js(12,1): error TS2454: Variable 'inner' is used before being assigned.
a.js(13,1): error TS2454: Variable 'inner' is used before being assigned.


==== a.js (2 errors) ====
    var Outer = {};
    
    Outer.Inner = class {
        constructor() {
            this.x = 1
        }
        m() { }
    }
    
    /** @type {Outer.Inner} */
    var inner
    inner.x
    ~~~~~
!!! error TS2454: Variable 'inner' is used before being assigned.
    inner.m()
    ~~~~~
!!! error TS2454: Variable 'inner' is used before being assigned.
    var inno = new Outer.Inner()
    inno.x
    inno.m()
    